# e2k-arch

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: aau.rs  alc.rs  bundle.rs  cu.rs  error.rs  lib.rs  macros.rs  plu.rs  raw.rs  state.rs  util.rs
src/alc/: instr.rs  operands.rs  state.rs
src/alc/instr/: args.rs  display.rs  fmt.rs  operand.rs  operands.rs
src/alc/instr/operand/: addr.rs  addr_array.rs  dst.rs  merge_cond.rs  src1.rs  src2.rs
src/cu/: control0.rs  control1.rs  ct.rs  state.rs  stubs.rs
src/plu/: clp.rs  elp.rs  state.rs
src/raw/: operand.rs  packed.rs  syllable.rs  types.rs
src/state/: cond.rs  lit.rs  pred.rs  reg.rs  state_reg.rs
